# nginx-auth-server

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: nginx-auth-request.drawio
examples/: nginx-auth-server.service  shadow_totp
examples/etc/nginx/conf.d/: example-vhost.conf
examples/etc/nginx/snippets/: auth-sso.conf  auth.conf
examples/etc/systemd/system/: nginx-auth-server.service
examples/nginx/conf.d/: auth.conf
examples/nginx/snippets/: auth-sso.conf  auth.conf
examples/www/: index.htm
src/: main.rs  routes.rs  session.rs  totp.rs
www/: index.htm
