[package]
name = "nginx-auth-server"
version = "1.0.0"
authors = ["Steffen Manzer"]
edition = '2024'

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cookie = "0.18"
once_cell = "1.21"
otpauth = "0.5"
pam = { git = "https://github.com/1wilkens/pam.git", rev = "daf26ae3512d8e5a7478ccff1e4232ef5ebf9b03" } # latest release 0.8 still uses deprecated `users` crate, this rev switched to `uzers`
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
